--- a/.gitignore
+++ b/.gitignore
@@ -3,14 +3,12 @@ build/*
 build-*
 lib/*
 contrib/dma_loopback/sim
-PRISCAS/Debug/*
-PRISCAS/Release/*
-PRISCAS/PRISCAS.opensdf
-PRISCAS/ipch/*
-PRISCAS_Shell/Debug/*
-PRISCAS_Shell/Release/*
-PDCUtil/Debug/*
-PDCUtil/Release/*
+class/Debug/*
+class/class/Debug/*
+class/class/Release/*
+class/ipch/*
+class/csim/Debug/*
+class/csim/Release/*
 *.a
 *.lib
 *.dll
@@ -29,6 +27,8 @@ testing/tests/unix_test
 *.un~
 *~
 *.stackdump
+*.opensdf
 simUI/simUI.pro.user*
 simUI/Makefile
 *.sdf
+*.pdb
